[package]
name = "runnables-cli"
description = "cli to run executables in a workspace"
author = ["mbecker20 <becker.maxh@gmail.com>"]
repository = "https://github.com/mbecker20/runnables-cli"
license = "GPL-3.0-or-later"
edition = "2021"
version = "1.2.5"

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
indexmap = { version = "2.6.0", features = ["serde"] }
ratatui = { version = "0.28.1", features = ["all-widgets"] }
crossterm = "0.28.1"
tui-input = "0.10.1"
run_command = "0.0.6"
anyhow = "1.0.89"
toml = "0.8.19"
serde_json = "1.0.128"
path-clean = "1.0.1"
enum_cycling = "0.2.1"
derive_variants = "1.0.0"
colored = "2.1.0"
