[package]
name = "runnables-cli"
description = "cli to run executables in a workspace"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
repository = "https://github.com/mbecker20/runnables-cli"
license = "GPL-3.0-or-later"
edition = "2021"
version = "1.3.8"

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
clap = { version = "4.5.42", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-input = "0.14.0"
run_command = "0.0.6"
anyhow = "1.0.98"
toml = "0.9.5"
serde_json = "1.0.142"
path-clean = "1.0.1"
enum_cycling = "0.2.1"
derive_variants = "1.0.0"
colored = "3.0.0"
